Add small frontend application.
